Fixed screen flickering

--- a/src/css/licensesplash.css
+++ b/src/css/licensesplash.css
@@ -54,7 +54,7 @@ body {
   width: 640px;
   margin-left: -330px;
   text-align: left;
-  animation: 630s licenseroll linear infinite;
+  animation: 300s licenseroll linear infinite;
   background: rgba(0, 0, 0, 0.2);
   padding-left: 10px;
   padding-right: 10px;
